# clickup_tests

./: .env-copy  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
allure-results/: 0054835c-690b-4eba-a022-d0b702e2833b-container.json  006cd2e9-ec02-4994-aed1-29d9e35b8c3a-container.json  00aa8c24-deac-490d-82ac-67fbb71f159b-result.json  00afe0d6-8742-44ed-ad98-5c9d15d767dc-container.json  00d41144-5a46-4242-b4c4-a33e50b39097-container.json  00edd630-f88f-4c2e-b977-18c6bba60926-container.json  00f59337-9c17-48ea-a947-33d00994ca78-result.json  010a99de-40c6-4c27-a8d9-696b0a2cecd7-result.json  012af592-4fa9-4a85-a73b-bc042c493733-container.json  02a564be-928c-4aec-9c7d-bc4b85c1da83-container.json  02c8bf37-d350-4a35-b23d-6abbc03d43ed-container.json  0342ee08-582f-4c46-95cb-1591f6102582-container.json  04fcafbe-27b1-4c2c-afa8-7de35bdee686-container.json  0533e895-3f26-4209-94da-a6a22aea5c44-container.json  05425c7d-d0cf-43a6-86c7-142f3c09e561-container.json  057cbd13-32ff-45db-823f-39dbc60925f8-attachment.json  057ce2cf-eb42-49bf-9a49-b2608ad2fc18-container.json  05f2c05a-ca42-4ab0-8a29-9983bd760632-result.json  070fc378-2de7-4b1b-b75a-523acd11915d-result.json  08b31a8f-fc1d-4d0d-8457-a5207843d6ff-result.json  097473c3-9591-4539-9e95-2968e545a7b6-result.json  0a19c9ad-e2c5-45c6-81e5-ccb9c5c26bcc-container.json  0a1c358c-bca9-4dad-b1fe-a153f87fd263-container.json  0a936160-8bf7-4f72-8265-235b1a941e76-attachment.json  0a9ce587-0344-4a50-9bcf-188690551cd4-container.json  0c9cbe10-467b-4c92-bca2-4b06ffa2de69-attachment.json  (+565 more)
api/: api_manager.py  tasks_api.py
(+35 files in other folders)
